# Rustsomware

./: .gitignore  Cargo.toml  README.md  build.rs  registry keys  rustsomware.exe.manifest
examples/: main.rs
files/: Fluent-round-dark.tar.xz.rustsw.rustsw  Fluent-round-dark.tar.xz.rustsw.rustsw.rustsw  Fluent-round-dark.tar.xz.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw  arch install.png.rustsw.rustsw  arch install.png.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw  background.jpg.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw  discord_login.curl.rustsw.rustsw.rustsw  idee principale geografie.txt.rustsw.rustsw  idee principale geografie.txt.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw  important.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw.rustsw
files/dsa/: arch install.png.rustsw.rustsw.rustsw  discord_login.curl.rustsw.rustsw  fdasf.rustsw.rustsw  fdasf.rustsw.rustsw.rustsw  idee principale geografie.txt.rustsw.rustsw.rustsw  imp.rustsw.rustsw  imp.rustsw.rustsw.rustsw
src/: main.rs  smart_dir_list.rs
src/encryption/: encryptor.rs  key_gen.rs  mod.rs
src/smart_dir/: dir_list.rs  mod.rs
src/system_changer/: mod.rs  other.rs  registry_changer.rs
