[package]
name = "rustsomware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.10.3"
rand = "0.8.5"
rand_hc = "0.3.1"
fs_extra = "1.2.0"
dirs = "4.0.0"
walkdir = "2.3.2"
sysinfo = "0.23.2"
mountpoints = "0.1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
